  - Now allow administrators to disable all plugins or enable just
    a select few plugins (overriding the active plugins in the normal
    configuration) by setting $temporary_plugins as an empty array
    (all disabled) or an array with one or more plugin directory names
    in config_local.php.
  - Backport fix for call_user_func_array not supporting NULL as empty
    array in PHP 5.3.3

Version 1.4.21 - 23 Jul 2010
----------------------------
  - Now allow more than one plugin to control the compose form submit action.
  - When sorting by received date, the received date is now shown on the
    message list.
  - Explicitly disabled browser caching for left_main and right_main pages
    (#2983134).
  - Fixed error with SpamCop reporting plugin not being able to send report
    as emails (#1795310).
  - Fixed typo in SpamCop plugin.
  - Reduced default time security tokens stay valid from 30 days to 2 days
    (reduces chances of session data growing too large)
  - Several speed enhancements for recent fixes regarding the display of
    encoded subjects, including a fix for messages with invalid subject
    encoding (includes #2987016 amongst several other issues reported via
    mailing list, etc.) (Many thanks to Zdenek Pytela for the untiring help
    diagnosing and testing.)
  - Fixed minor vulnerability in Mail Fetch plugin.
    [CVE-2010-1637/TEHTRI-SA-2010-009]
  - Now properly quote personal part of encoded addresses when replying.
  - Now fill in default subject when forwarding as attachment (#2936541).
  - Implement header folding that doesn't add extraneous spaces so unfolding
    is less ambiguous (#1951776).
  - Fixed issues caused by use of PostgreSQL keyword "user" in SquirrelMail's
    default preferences database schema (#2943483).
  - Fixed attachment filename decoding problems (#2994865).
  - Now default search criteria to the TO header when searching the sent folder.
  - Fixed literal processing of 8-bit usernames/passwords during login.